/**
 * If proto has been changed. You must remove all comments and rerun build.rs to generate new rust files
 */
pub fn main() -> Result<(), Box<dyn std::error::Error>> {
    tonic_build::configure().compile_with_config(config, protos, includes)
        .type_attribute(
            "common.KeyedDataEvent",
            "#[derive(serde::Serialize,serde::Deserialize)]",
        )
        .type_attribute(
            "common.Entry",
            "#[derive(serde::Serialize,serde::Deserialize)]",
        )
        .type_attribute(
            "common.ResourceId",
            "#[derive(serde::Serialize,serde::Deserialize)]",
        )
        .type_attribute(
            "common.KeyedDataEvent.Window",
            "#[derive(serde::Serialize,serde::Deserialize)]",
        )
        .type_attribute(
            "common.HostAddr",
            "#[derive(serde::Serialize,serde::Deserialize)]",
        )
        .out_dir("src")
        .compile(
            &[
                "../../proto/common/common.proto",
                "../../proto/common/event.proto",
                "../../proto/common/stream.proto",
            ],
            &["../../proto"],
        )?;

    tonic_build::configure()
        .type_attribute(
            "common.KeyedDataEvent",
            "#[derive(serde::Serialize,serde::Deserialize)]",
        )
        .type_attribute(
            "common.Entry",
            "#[derive(serde::Serialize,serde::Deserialize)]",
        )
        .type_attribute(
            "common.ResourceId",
            "#[derive(serde::Serialize,serde::Deserialize)]",
        )
        .type_attribute(
            "common.KeyedDataEvent.Window",
            "#[derive(serde::Serialize,serde::Deserialize)]",
        )
        .type_attribute(
            "common.HostAddr",
            "#[derive(serde::Serialize,serde::Deserialize)]",
        )
        .out_dir("src")
        .compile(
            &[
                "../../proto/coordinator/coordinator.proto",
                "../../proto/taskmanager/taskmanager.proto",
                "../../proto/apiserver/apiserver.proto",
            ],
            &["../../proto"],
        )?;

    Ok(())
}
